@@ -15,6 +15,9 @@
 	  show as all black instead of random colors.
 	Rev 7282
 	* objs/egg.cc: rand()%1 is always zero; changed to rand()%2.
+	Rev 7283
+	* files/utils.h, tools/wud.cc: WUD is no longer the unportable mess it was.
+	  Eliminated warnings.
 
 013-01-12 Dominik Reichardt <dominus@users.sourceforge.net>
 	* configure.ac and all makefile.am files: fixed compiling with current 
